--- a/Presentation.tex
+++ b/Presentation.tex
@@ -309,7 +309,7 @@
 		\item Quality factor (Q) describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item $Q>0.5$; underdamped, $Q=0.5$; critically damped, $Q<0.5$; overdamped, $Q\rightarrow 0$; noise is equal to damping. 
-		\item Coupled noise estimation; from measured amplitudes. 
+		\item Estimated noise; from measured amplitudes $10^{-19}[W]$. 
 		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
@@ -325,7 +325,8 @@
 		\item Environment gas cause pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
-		\item Estimated noise much smaller than calculated noise.				
+		\item Estimated noise much smaller than calculated noise.	
+		\item \textcolor{red}{Problem: coupled driving noise is unknown.}			
 
 			
 	\end{itemize}
