--- a/Presentation.tex
+++ b/Presentation.tex
@@ -326,7 +326,7 @@
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
 		%\item Estimated noise much smaller than calculated noise.	
-		\item \textcolor{red}{Noise calculated from equations $10^{-6}[W]$.}			
+		\item \textcolor{red}{Noise power calculated from equations $10^{-6}[W]$.}			
 
 			
 	\end{itemize}
@@ -346,7 +346,8 @@
 		
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Coupled noise is mostly Brownian motion (negligible addition of black body radiation and acoustic waves).   	 
+		\item Coupled noise is mostly Brownian motion (negligible addition of black body radiation and acoustic waves). 
+		\item Coupled noise power: $p \approx 4.4\cdot 10^{-25}[W]$.  	 
 					
 	\end{itemize}
 	\hyperlink{frame:The effective noise 1}{>>} 
