--- a/Presentation.tex
+++ b/Presentation.tex
@@ -358,7 +358,7 @@
 \begin{frame}{The uncertainty limit}
 	
 	\begin{itemize}
-		\item Inserting effective noise value into quality factor.
+		\item Inserting effective noise power into quality factor.
 		\item Might allow damping down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$.
 		\item Uncertainty limit is equal to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
@@ -401,7 +401,7 @@
 	\begin{itemize}
 		
 		\item PID not the best control algorithm; linear approximation. 
-		\item Next stage would have non linear motion approximation.
+		\item Next stage would have a non linear motion approximation and a more accurate response of the damping system.
 		\item Goal of damping beyond room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
