--- a/Presentation.tex
+++ b/Presentation.tex
@@ -326,7 +326,7 @@
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
 		%\item Estimated noise much smaller than calculated noise.	
-		\item \textcolor{red}{Noise power calculated from equations $10^{-6}[W]$.}			
+		\item \textcolor{red}{Calculated noise; from equations $10^{-6}[W]$.}			
 
 			
 	\end{itemize}
