--- a/Presentation.tex
+++ b/Presentation.tex
@@ -560,7 +560,7 @@
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
 		\item An ideal gas has negligible inter-particle interactions.
-		\item Brownian motion cause random collisions. 
+		\item Brownian motion cause random collisions $\frac{36A^2P^2}{m_1}$. 
 		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
 		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
 		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
