--- a/Presentation.tex
+++ b/Presentation.tex
@@ -562,8 +562,8 @@
 		\item Ideal gas model with negligible inter-particle interactions.
 		\item Brownian motion cause random collisions $p=\frac{36A^2P^2}{m_1}$. 
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
-		\item Acoustic waves are propagating with power of $p=10^{-22}AP^2$.
-		\item Heat flow thermal energy exchange between physical systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
+		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
+		\item Heat flow energy exchange between physical systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
