--- a/Presentation.tex
+++ b/Presentation.tex
@@ -559,11 +559,11 @@
 \begin{frame}{\hypertarget{frame:Environmental noises 1}{Environmental noises}}
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
-		\item Ideal gas model with negligible inter-particle interactions.
+		\item Ideal gas model with negligible inter-particle interactions;
 		\item Brownian motion cause random collisions $p=\frac{36A^2P^2}{m_1}$. 
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
-		\item Heat flow energy exchange between physical systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
+		\item Heat flow energy exchange between systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
