--- a/Presentation.tex
+++ b/Presentation.tex
@@ -563,7 +563,7 @@
 		\item Brownian motion cause random collisions $p=\frac{36A^2P^2}{m_1}$. 
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
-		\item Heat flow energy exchange between systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
+		\item Heat flow between physical systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
 		
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
