--- a/Presentation.tex
+++ b/Presentation.tex
@@ -568,10 +568,21 @@
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
 \end{frame}
-
+\begin{frame}{\hypertarget{frame:Environmental noises 2}{Environmental noises}}
+	\framesubtitle{Pressure and temperature dependent noises}
+	\begin{itemize}	
+		\item Thermal flow: $p=0.083[W]$.
+		\item Black body radiation: $p=0.121[W]$.
+		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
+		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
+		\item New estimated noise: $p=1\cdot 10^{-19} - 7\cdot 10^{-19}[W]$.
+					
+	\end{itemize}
+	\hyperlink{frame:Environmental noises}{<<} 
+\end{frame}
 
 % frame 2 - skip
-\begin{frame}{\hypertarget{frame:Environmental noises 2}{Environmental noises}}
+\begin{frame}{\hypertarget{frame:Environmental noises 3}{Environmental noises}}
 	\framesubtitle{Friction}
 	\begin{itemize}
 		\item Friction, caused by drag force, decreases with pressure.		
