--- a/Presentation.tex
+++ b/Presentation.tex
@@ -545,11 +545,10 @@
 \begin{frame}{\hypertarget{frame:The effective noise 1}{The effective noise}}
 	\framesubtitle{Calculated noises}
 	\begin{itemize}	
-		\item Thermal flow: $p=0.083[W]$.
 		\item Black body radiation: $p=0.121[W]$.
 		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
-		\item New estimated noise: $p=1\cdot 10^{-19} - 7\cdot 10^{-19}[W]$.
+		\item Calculated noise: $p=4.4\cdot 10^{-25} [W]$.
 					
 	\end{itemize}
 	\hyperlink{frame:The effective noise}{<<} 
@@ -575,7 +574,6 @@
 		\item Black body radiation: $p=0.121[W]$.
 		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
-		\item New estimated noise: $p=1\cdot 10^{-19} - 7\cdot 10^{-19}[W]$.
 					
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
