--- a/Presentation.tex
+++ b/Presentation.tex
@@ -326,7 +326,7 @@
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
 		%\item Estimated noise much smaller than calculated noise.	
-		\item \textcolor{red}{Calculated noise; from equations $10^{-6}[W]$.}			
+		\item \textcolor{red}{Calculated noise; from equations $0.1[W]$.}			
 
 			
 	\end{itemize}
@@ -574,6 +574,8 @@
 		\item Black body radiation: $p=0.121[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
 		\item Thermal flow: $p=0.083[W]$.
+		\item Calculated noise: $p=0.121 [W]$.
+
 					
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
