--- a/Presentation.tex
+++ b/Presentation.tex
@@ -545,10 +545,9 @@
 \begin{frame}{\hypertarget{frame:The effective noise 1}{The effective noise}}
 	\framesubtitle{Calculated noises}
 	\begin{itemize}	
-		\item Black body radiation: $p=0.121[W]$.
-		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
-		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
-		\item Calculated noise: $p=4.4\cdot 10^{-25} [W]$.
+		\item Brownian motion: $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$. 
+		\item Net collision power from black body radiation: $p= \frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5$.
+		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
 					
 	\end{itemize}
 	\hyperlink{frame:The effective noise}{<<} 
@@ -574,7 +573,7 @@
 		\item Black body radiation: $p=0.121[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
 		\item Thermal flow: $p=0.083[W]$.
-		\item Calculated noise: $p=0.121 [W]$.
+		\item Calculated noise: $p=0.13 [W]$.
 
 					
 	\end{itemize}
