--- a/Presentation.tex
+++ b/Presentation.tex
@@ -545,8 +545,8 @@
 \begin{frame}{\hypertarget{frame:The effective noise 1}{The effective noise}}
 	\framesubtitle{Calculated noises}
 	\begin{itemize}	
-		\item Brownian motion: $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$. 
-		\item Net collision power from black body radiation: $p= \frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5$.
+		\item Brownian motion net collision power: $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$. 
+		\item Black body radiation net collision power: $p= \frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5$.
 		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
 					
 	\end{itemize}
