--- a/Presentation.tex
+++ b/Presentation.tex
@@ -543,11 +543,11 @@
 
 
 \begin{frame}{\hypertarget{frame:The effective noise 1}{The effective noise}}
-	\framesubtitle{Calculated noises}
+	\framesubtitle{Net collision power}
 	\begin{itemize}	
-		\item Brownian motion net collision power: $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$. 
-		\item Black body radiation net collision power: $p= \frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5$.
-		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
+		\item Brownian motion: $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}=$. 
+		\item Black body radiation: $p= \frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5=4.4\cdot 10^{-25}  [W]$.
+		\item Acoustic waves: $p=10^{-22}AP^2=$.
 					
 	\end{itemize}
 	\hyperlink{frame:The effective noise}{<<} 
