--- a/Presentation.tex
+++ b/Presentation.tex
@@ -336,7 +336,7 @@
 
 
 
-\begin{frame}{\hypertarget{frame:The effective noise}{The effective noise}}
+\begin{frame}{\hypertarget{frame:The driving power}{The driving power}}
 	\begin{center}		
 		\includegraphics[width=0.35\textwidth,keepaspectratio]{random_motion1.jpg}
 	\end{center}
@@ -350,7 +350,7 @@
 		\item Coupled noise power: $p \approx 4.4\cdot 10^{-25}[W]$.  	 
 					
 	\end{itemize}
-	\hyperlink{frame:The effective noise 1}{>>} 
+	\hyperlink{frame:The driving power 1}{>>} 
 
 \end{frame}
 
@@ -542,16 +542,16 @@
 \end{frame}
 
 
-\begin{frame}{\hypertarget{frame:The effective noise 1}{The effective noise}}
+\begin{frame}{\hypertarget{frame:The driving power 1}{The driving power}}
 	\framesubtitle{Net collision power}
 	\begin{itemize}	
-		\item At room temperature with pressure of $0.01[PA]$.
+		\item At room temperature with pressure of $0.01[PA]$;
 		\item Brownian motion: $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}=4.4\cdot 10^{-25}  [W]$. 
 		\item Black body radiation: $p= \frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5=3.2\cdot 10^{-35}$.
 		\item Acoustic waves: $p=10^{-22}AP^2=1.1\cdot 10^{-28}$.
 					
 	\end{itemize}
-	\hyperlink{frame:The effective noise}{<<} 
+	\hyperlink{frame:The driving power}{<<} 
 \end{frame}
 
 % frame 2 - skip
