--- a/Presentation.tex
+++ b/Presentation.tex
@@ -346,8 +346,7 @@
 		
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Coupled noise is mostly Brownian motion (negligible addition of black body radiation and acoustic waves). 
-		\item Coupled noise power: $p \approx 4.4\cdot 10^{-25}[W]$.  	 
+		\item Coupled noise is mostly Brownian motion (negligible addition of black body radiation and acoustic waves); $p \approx 4.4\cdot 10^{-25}[W]$ 
 					
 	\end{itemize}
 	\hyperlink{frame:The driving power 1}{>>} 
