--- a/Presentation.tex
+++ b/Presentation.tex
@@ -347,7 +347,7 @@
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Driving power is mostly Brownian motion (negligible addition of black body radiation and acoustic waves). 
-		\item textcolor{red}{Driving power by the model: $p \approx 4.4\cdot 10^{-25}[W]$.}  	 
+		\item \textcolor{red}{Driving power calculated by the model: $p = 4.4\cdot 10^{-25}[W]$.}  	 
 					
 	\end{itemize}
 	\hyperlink{frame:The driving power 1}{>>} 
@@ -358,7 +358,7 @@
 \begin{frame}{The uncertainty limit}
 	
 	\begin{itemize}
-		\item Inserting effective noise power into quality factor.
+		\item Inserting calculated Driving power into quality factor.
 		\item Might allow damping down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$.
 		\item Uncertainty limit is equal to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
