--- a/Presentation.tex
+++ b/Presentation.tex
@@ -347,7 +347,7 @@
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Driving power is mostly Brownian motion (negligible addition of black body radiation and acoustic waves). 
-		\item \textcolor{red}{Driving power calculated by the model: $p = 4.4\cdot 10^{-25}[W]$.}  	 
+		\item \textcolor{red}{Driving power calculated using the model: $p = 4.4\cdot 10^{-25}[W]$.}  	 
 					
 	\end{itemize}
 	\hyperlink{frame:The driving power 1}{>>} 
