--- a/Presentation.tex
+++ b/Presentation.tex
@@ -559,10 +559,12 @@
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
 		\item Ideal gas model with negligible inter-particle interactions;
-		\item Brownian motion cause random collisions $p=\frac{36A^2P^2}{m_1}$. 
-		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
-		\item Acoustic waves propagation with power of $p=10^{-22}AP^2$.
-		\item Heat flow between physical systems $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
+		\item Brownian motion random collisions; $p=\frac{36A^2P^2}{m_1}=6.2\cdot 10^{-6}[W]$. 
+		\item Black body radiation; $p= A \sigma\epsilon[ T^4- T_0^4]=0.121[W]$.
+		\item Acoustic waves propagation; $p=10^{-22}AP^2=1.1\cdot 10^{-28}[W]$.
+		\item Heat flow between physical systems; $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} =0.083[W]$.
+		\item Calculated noise: $p=0.13 [W]$.
+
 		
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
@@ -574,7 +576,6 @@
 		\item Black body radiation: $p=0.121[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
 		\item Thermal flow: $p=0.083[W]$.
-		\item Calculated noise: $p=0.13 [W]$.
 
 					
 	\end{itemize}
