--- a/Presentation.tex
+++ b/Presentation.tex
@@ -559,11 +559,11 @@
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
 		\item Ideal gas model with negligible inter-particle interactions;
-		\item Brownian motion random collisions; $p=\frac{36A^2P^2}{m_1}=6.2\cdot 10^{-6}[W]$. 
-		\item Black body radiation; $p= A \sigma\epsilon[ T^4- T_0^4]=0.121[W]$.
-		\item Acoustic waves propagation; $p=10^{-22}AP^2=1.1\cdot 10^{-28}[W]$.
-		\item Heat flow between physical systems; $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} =0.083[W]$.
-		\item Calculated noise: $p=0.13 [W]$.
+		\item Brownian motion random collisions; $\frac{36A^2P^2}{m_1}=6.2\cdot 10^{-6}[W]$. 
+		\item Black body radiation; $A \sigma\epsilon[ T^4- T_0^4]=0.121[W]$.
+		\item Acoustic waves propagation; $10^{-22}AP^2=1.1\cdot 10^{-28}[W]$.
+		\item Heat flow between physical systems; $A P c_v \Delta T \sqrt{\frac{M}{RT}} =0.083[W]$.
+		\item Calculated noise power: $p=0.13 [W]$.
 
 		
 	\end{itemize}
