--- a/Presentation.tex
+++ b/Presentation.tex
@@ -562,7 +562,7 @@
 		\item Brownian motion random collisions; $\frac{36A^2P^2}{m_1}=6.2\cdot 10^{-6}[W]$. 
 		\item Black body radiation; $A \sigma\epsilon[ T^4- T_0^4]=0.121[W]$.
 		\item Acoustic waves propagation; $10^{-22}AP^2=1.1\cdot 10^{-28}[W]$.
-		\item Heat flow between physical systems; $A P c_v \Delta T \sqrt{\frac{M}{RT}} =0.083[W]$.
+		\item Heat flow between systems; $A P c_v \Delta T \sqrt{\frac{M}{RT}} =0.083[W]$.
 		\item Calculated noise power: $p=0.13 [W]$.
 
 		
