--- a/Presentation.tex
+++ b/Presentation.tex
@@ -292,7 +292,7 @@
 	\begin{itemize}	
 		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; further uncertainty reduction by time integration.	
 		\item Setup able to damp down to an amplitude of $0.05[\mu rad]$.
-		\item \textcolor{red}{Problem: noise power driving the system is unknown.}
+		\item \textcolor{red}{Estimation of noise power limiting the damping process.}
 					
 	\end{itemize}
 \end{frame}
