--- a/Presentation.tex
+++ b/Presentation.tex
@@ -309,7 +309,7 @@
 		\item Quality factor (Q) describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item $Q>0.5$; underdamped, $Q=0.5$; critically damped, $Q<0.5$; overdamped, $Q\rightarrow 0$; noise is equal to damping. 
-		\item \textcolor{red}{Estimated noise; from measured amplitudes $10^{-19}[W]$.} 
+		\item \textcolor{red}{Estimated noise from measured amplitudes; $10^{-19}[W]$.} 
 		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
@@ -326,7 +326,7 @@
 		\item Environmental black body radiation energy.
 		\item Unknown Magnetic noise from the setup electronics.
 		%\item Estimated noise much smaller than calculated noise.	
-		\item \textcolor{red}{Calculated noise; from equations $0.1[W]$.}			
+		\item \textcolor{red}{Calculated noise from equations; $0.1[W]$.}			
 
 			
 	\end{itemize}
@@ -347,7 +347,7 @@
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Driving power is mostly Brownian motion (negligible addition of black body radiation and acoustic waves). 
-		\item \textcolor{red}{Driving power using the model: $p = 4.4\cdot 10^{-25}[W]$.}  	 
+		\item \textcolor{red}{Driving power using the model; $p = 4.4\cdot 10^{-25}[W]$.}  	 
 					
 	\end{itemize}
 	\hyperlink{frame:The driving power 1}{>>} 
