--- a/Presentation.tex
+++ b/Presentation.tex
@@ -69,7 +69,8 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
+		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$. A. Peters, K. Y. Chung, and S. Chu. High-precision gravity measurements using atom
+interferometry. Metrologia, 38(1):25, 2001.
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
@@ -607,7 +608,7 @@
 
 
 
-\iffalse
+%\iffalse
 
 \subsection[Basic Problem]{The basic problem that we have studied}
 
@@ -737,6 +738,6 @@
 \oldstylenums{2000}.
 	\end{thebibliography}
 \end{frame}
-\fi
+%\fi
 
 \end{document}
