--- a/Presentation.tex
+++ b/Presentation.tex
@@ -69,8 +69,11 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$. A. Peters, K. Y. Chung, and S. Chu. High-precision gravity measurements using atom
-interferometry. Metrologia, 38(1):25, 2001.
+		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$. 
+		\small 
+		A. Peters, K. Y. Chung, and S. Chu. High-precision gravity measurements using atom interferometry. Metrologia, 38(1):25, 2001.
+		\normalsize
+
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
@@ -82,7 +85,7 @@ interferometry. Metrologia, 38(1):25, 2001.
 % frame 4
 \begin{frame}{\hypertarget{frame:Cavendish apparatus}{Cavendish apparatus}}
 	\begin{center}		
-		\includegraphics[width=0.32\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+\includegraphics[width=0.32\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
@@ -608,7 +611,7 @@ interferometry. Metrologia, 38(1):25, 2001.
 
 
 
-%\iffalse
+\iffalse
 
 \subsection[Basic Problem]{The basic problem that we have studied}
 
@@ -738,6 +741,6 @@ interferometry. Metrologia, 38(1):25, 2001.
 \oldstylenums{2000}.
 	\end{thebibliography}
 \end{frame}
-%\fi
+\fi
 
 \end{document}
