--- a/Presentation.tex
+++ b/Presentation.tex
@@ -70,7 +70,7 @@
 	\begin{itemize}
 
 		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$. 
-		\small 
+		\fontsize{9}{11}\selectfont
 		A. Peters, K. Y. Chung, and S. Chu. High-precision gravity measurements using atom interferometry. Metrologia, 38(1):25, 2001.
 		\normalsize
 
