--- a/Presentation.tex
+++ b/Presentation.tex
@@ -70,13 +70,14 @@
 	\begin{itemize}
 
 		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$. 
-		\fontsize{9}{11}\selectfont
-		\newline
-		 A. Peters, K. Y. Chung, and S. Chu. High-precision gravity measurements using atom interferometry. Metrologia, 38(1):25, 2001.
-		\normalsize
+		
 
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
+		\fontsize{9}{11}\selectfont
+		\newline
+		 A. Peters, K. Y. Chung, and S. Chu. High-precision gravity measurements using atom interferometry. Metrologia, 2001.
+		\normalsize
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
 
 		
