--- a/Presentation.tex
+++ b/Presentation.tex
@@ -75,9 +75,13 @@
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\fontsize{7}{11}\selectfont
-		 Peters, Chu. High-precision gravity measurements using atom interferometry. Metrologia, 2001.
+		Chu. High-precision gravity measurements using atom interferometry. Metrologia, 2001.
 		\normalsize
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
+		\fontsize{7}{11}\selectfont
+		M. Kasevich, Testing gravity with cold-atom interferometers. Phys. Rev, 2015.
+		\normalsize
+
 
 		
 	\end{itemize}
