--- a/Presentation.tex
+++ b/Presentation.tex
@@ -75,7 +75,7 @@
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\fontsize{7}{11}\selectfont
-		Chu. High-precision gravity measurements using atom interferometry. Metrologia, 2001.
+		S. Chu, High-precision gravity measurements using atom interferometry. Metrologia, 2001.
 		\normalsize
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
 		\fontsize{7}{11}\selectfont
