--- a/Presentation.tex
+++ b/Presentation.tex
@@ -79,7 +79,7 @@
 		\normalsize
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
 		\fontsize{7}{11}\selectfont
-		M. Kasevich, Testing gravity with cold-atom interferometers. Phys. Rev, 2015.
+		M. Kasevich, Testing gravity with cold-atom interferometers. Phys. Rev A, 2015.
 		\normalsize
 
 
