--- a/Presentation.tex
+++ b/Presentation.tex
@@ -70,8 +70,9 @@
 	\begin{itemize}
 
 		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$. 
-		
-
+		\fontsize{7}{11}\selectfont
+		A. Germak, Design of New Launch and Interferometer Systems for the IMGC-02 Absolute Gravimeter. International Association of Geodesy Symposia, 2020. 
+		\normalsize
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\fontsize{7}{11}\selectfont
