--- a/Presentation.tex
+++ b/Presentation.tex
@@ -97,7 +97,7 @@
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\item Apparatus measures the gravitational torque of test mass.
 		\item Mass attracts both masses $m$; creating a net torque $\tau_g$.
-		\item Equilibrium: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3} \approx frac{GT^2}{12\pi^2 L } \cdot \frac{M}{r_1^2} $.
+		\item Equilibrium: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3} \approx \frac{GT^2}{12\pi^2 L } \cdot \frac{M}{r_1^2} $.
 
 	\end{itemize}
 	\hyperlink{frame:Cavendish apparatus 1}{>>} 
