--- a/Presentation.tex
+++ b/Presentation.tex
@@ -401,6 +401,9 @@
 		\item Similar results were published in Nature at march 2021.
 		\item Measured down to $90 [mg]$ around spectral band of $12.7 [mHz]$, preventing high frequency nonlinear coupling.
 		\item Feedback control systems are not limited to a specific spectral band.
+		\fontsize{7}{11}\selectfont
+		\item J. Pfaff, Measurement of gravitational coupling between millimetre-sized masses, Nature, 2021. 
+		\normalsize
 
 	\end{itemize}
 \end{frame}
