--- a/Presentation.tex
+++ b/Presentation.tex
@@ -302,6 +302,7 @@
 	\begin{itemize}	
 		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; further uncertainty reduction by time integration.	
 		\item Setup able to damp down to an amplitude of $0.05[\mu rad]$.
+		\item Sensitivity of $100-30[mg]$.
 		\item \textcolor{red}{Estimation of noise power limiting the damping process.}
 					
 	\end{itemize}
