--- a/Presentation.tex
+++ b/Presentation.tex
@@ -370,7 +370,7 @@
 	
 	\begin{itemize}
 		\item Inserting calculated driving power into quality factor.
-		\item Might allow damping down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$, allowing to measure masses down to $10[nano-g]$.
+		\item Might allow damping down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$, and measure masses down to $10[ng]$.
 		\item Uncertainty limit is equal to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 				
