--- a/Presentation.tex
+++ b/Presentation.tex
@@ -302,7 +302,7 @@
 	\begin{itemize}	
 		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; further uncertainty reduction by time integration.	
 		\item Setup able to damp down to an amplitude of $0.05[\mu rad]$.
-		\item Sensitivity of $100-30[mg]$.
+		\item Sensitivity of $100-30[gram]$.
 		\item \textcolor{red}{Estimation of noise power limiting the damping process.}
 					
 	\end{itemize}
@@ -370,7 +370,7 @@
 	
 	\begin{itemize}
 		\item Inserting calculated driving power into quality factor.
-		\item Might allow damping down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$, and measure masses down to $10[ng]$.
+		\item Might allow damping down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$, and measure masses down to $10[\mu g]$.
 		\item Uncertainty limit is equal to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 				
