--- a/Presentation.tex
+++ b/Presentation.tex
@@ -568,7 +568,7 @@
 \begin{frame}{\hypertarget{frame:Environmental noises 1}{Environmental noises}}
 	\framesubtitle{Pressure and temperature dependent noises}
 	\begin{itemize}
-		\item Ideal gas model with negligible inter-particle interactions; room temperature with pressure of $0.01[PA]$;
+		\item Ideal gas model with negligible inter-particle interactions; at $298[K]$ with pressure of $0.01[PA]$;
 
 		\item Brownian motion random collisions; $\frac{36A^2P^2}{m_1}=6.2\cdot 10^{-6}[W]$. 
 		\item Black body radiation; $A \sigma\epsilon[ T^4- T_0^4]=0.121[W]$.
@@ -585,7 +585,7 @@
 \begin{frame}{\hypertarget{frame:The driving power 1}{The driving power}}
 	\framesubtitle{Net collision power}
 	\begin{itemize}	
-		\item At room temperature with pressure of $0.01[PA]$;
+		\item At $298[K]$ with pressure of $0.01[PA]$;
 		\item Brownian motion; $\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}=4.4\cdot 10^{-25}  [W]$. 
 		\item Black body radiation; $\frac{2.7A k_B}{ c^2 m_1} (4-3\epsilon)\sigma T^5=3.2\cdot 10^{-35}[W]$.
 		\item Acoustic waves; $10^{-22}AP^2=1.1\cdot 10^{-28}[W]$.
