--- a/Presentation.tex
+++ b/Presentation.tex
@@ -74,16 +74,20 @@
 		A. Germak, Design of New Launch and Interferometer Systems for the IMGC-02 Absolute Gravimeter. International Association of Geodesy Symposia, 2020. 
 		\normalsize
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
+		%\fontsize{7}{11}\selectfont
+		%S. Chu, High-precision gravity measurements using atom interferometry. Metrologia, 2001.
+		%\normalsize
 		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\fontsize{7}{11}\selectfont
-		S. Chu, High-precision gravity measurements using atom interferometry. Metrologia, 2001.
+		M. Goodkind, The superconducting gravimeter. Review of Scientific Instruments, 1999.
 		\normalsize
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
 		\fontsize{7}{11}\selectfont
 		M. Kasevich, Testing gravity with cold-atom interferometers. Phys. Rev A, 2015.
 		\normalsize
 
-
+John M. Goodkind. The superconducting gravimeter. Review of Scientific Instruments,
+70(11):4131–4152, 1999.
 		
 	\end{itemize}
 \end{frame}
