--- a/Presentation.tex
+++ b/Presentation.tex
@@ -347,6 +347,32 @@
 
 
 
+\begin{frame}{Brownian motion}
+	\begin{center}		
+		\includegraphics[width=1\textwidth,keepaspectratio]{Brownian motion.png}
+	\end{center}
+	\begin{itemize}	
+		
+		\item Random particles’ fluctuations at thermal equilibrium in a given temperature causing random walk with no preferential direction of flow. 
+		\item Collisions elastic, with rate of $n_p=\frac{N}{V}vA$ having momentum exchange of $k=2m_0v$.
+		\item Assuming pendulum static, force of $F=n_p\cdot k$ changes velocity to $u=\frac{n_pk}{m_1}$.  
+		\item Brownian motion power; $p=F\cdot u=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}=4.4\cdot 10^{-25}  [W]$.
+
+						
+	\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 \begin{frame}{\hypertarget{frame:The driving power}{The driving power}}
