--- a/Presentation.tex
+++ b/Presentation.tex
@@ -354,7 +354,7 @@
 		\item Random fluctuations at thermal equilibrium in a given temperature cause random walk. 
 		\item Collisions with pendulum elastic, with rate of $n_p=\frac{N}{V}vA$ having momentum exchange of $k=2m_0v$.
 		\item Assuming pendulum static, force of $F=n_p\cdot k$ changes velocity to $u=\frac{n_pk}{m_1}$.  
-		\item Brownian motion power; $p=F\cdot u=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}=4.4\cdot 10^{-25}  [W]$.
+		\item Brownian motion power; $p=F\cdot u=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$.
 
 						
 	\end{itemize}
