--- a/Presentation.tex
+++ b/Presentation.tex
@@ -352,7 +352,7 @@
 	\begin{itemize}	
 		
 		\item Random fluctuations at thermal equilibrium in a given temperature cause random walk. 
-		\item Collisions with pendulum elastic, with rate of $n_p=\frac{N}{V}vA$ having mean momentum exchange of $k=2m_0v$.
+		\item Elastic collisions with pendulum, with rate of $n_p=\frac{N}{V}vA$ each having a mean momentum exchange of $k=2m_0v$.
 		\item Assuming pendulum is static; force of $F=n_p\cdot k$ changes velocity to $u=\frac{n_pk}{m_1}$.  
 		\item Brownian motion power; $p=F\cdot u=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$.
 
