--- a/Presentation.tex
+++ b/Presentation.tex
@@ -347,14 +347,14 @@
 
 \begin{frame}{Brownian motion}
 	\begin{center}		
-		\includegraphics[width=0.3\textwidth,keepaspectratio]{Brownian motion.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{Brownian motion.png}
 	\end{center}
 	\begin{itemize}	
 		
 		\item Random fluctuations at thermal equilibrium in a given temperature cause random walk. 
-		\item Elastic collisions with pendulum, with rate of $n_p=\frac{N}{V}vA$ each having a mean momentum exchange of $k=2m_0v$.
-		\item Assuming pendulum is static; force of $F=n_p\cdot k$ changes velocity to $u=\frac{n_pk}{m_1}$.  
-		\item Brownian motion power; $p=F\cdot u=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$.
+		\item Elastic collisions with pendulum; rate of $n_p=\frac{N}{V}vA$, each with a mean momentum exchange of $k=2m_0v$.
+		\item Assuming pendulum is static; force of $F=n_p\cdot k$ changes its velocity to $u=\frac{n_pk}{m_1}$, causing power of $p=F\cdot u$.  
+		\item Brownian motion power; $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$.
 
 						
 	\end{itemize}
