--- a/Presentation.tex
+++ b/Presentation.tex
@@ -345,7 +345,7 @@
 	\hyperlink{frame:Environmental noises 1}{>>} 
 \end{frame}
 
-\begin{frame}{Brownian motion}
+\begin{frame}{Brownian collisions modeling}
 	\begin{center}		
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{Brownian motion.png}
 	\end{center}
@@ -353,7 +353,7 @@
 		
 		\item Random fluctuations at thermal equilibrium in a given temperature cause random walk. 
 		\item Elastic collisions with pendulum; rate of $n_p=\frac{N}{V}vA$, each with a mean momentum exchange of $k=2m_0v$.
-		\item Assuming pendulum is static; force of $F=n_p\cdot k$ changes its velocity to $u=\frac{n_pk}{m_1}$, causing power of $p=F\cdot u$.  
+		\item Assuming static pendulum with mass $m_1$ is ; force of $F=n_p\cdot k$ changes its velocity to $u=\frac{n_pk}{m_1}$, causing power of $p=F\cdot u$.  
 		\item Brownian motion power; $p=\frac{12AP}{m_1}\sqrt{\frac{3 k_B T M}{ N_A }}$.
 
 						
